--- a/booking.html
+++ b/booking.html
@@ -142,19 +142,21 @@
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Выбрать Тур</option><!--Выбрать Тур-->
                                     
+                                   <option>Лимонарий</option>
+                                    <option>Каменец Подольский и Умань</option>
                                     <option>Грузия лето</option>
                                     <option>Загадочный Днепр</option>
-                                    <option>Зоопарк Харьков и Фентези Парк</option>
-                                    <option>Сырная ферма с дегустацией</option>
                                     <option>Арабатские термы</option>
+                                    <option>Зоопарк Харьков и Фентези Парк</option>
+                                     <option>Зоопарк Юг и источники</option>
+                                    <option>Сырная ферма с дегустацией</option>
+                                    <option>28 Лошадок и Симба</option>
+                                    <option>Кофейная эскурсия</option>
                                     <option>Пивная экскурсия</option>
                                     <option>Винная экскурсия</option>
                                     <option>Скифский стан</option>
                                     <option>3Д роспись Зоопарк</option>
-                                    <option>Лимонарий</option>
-                                    <option>Каменец Подольский и Умань</option>
                                     <option>Карпаты 2022</option>
-                                    <option>28 Лошадок и Симба</option>
                                     <option>Харьков Рождество</option>
                                     <option>Рождество по-Королевски</option>
                                     <option>Новогодние огни Днепра</option>
