--- a/packages.html
+++ b/packages.html
@@ -251,7 +251,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/Page-Zoo-and-springs.html">
-                            <img src="images/Zoo-and-springs/home-Zoo-and-springs.jpgg" alt="Zoo-and-springs" class="img-fluid" />
+                            <img src="images/Zoo-and-springs/home-Zoo-and-springs.jpg" alt="Zoo-and-springs" class="img-fluid" />
                         </a>
                          <p><span class="fa fa-tags"></span> <span> от 550грн.</span></p>
                     </div>
