--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -184,7 +184,7 @@
 						  Зоопарк Харьков и Фентези парк
                                             </a>
                                            </td>
-					  <td>  19 ферваля</td>
+					  <td>  19 Марта </td>
 				       </tr>
 				          
 				       <tr>
