--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                         </h5>
                         <p>Экскурсия в Лимонный сад, удивительное место</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  20 Февраля </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  27 Марта </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
