--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
-        content="Туры выходного дня 'Новый поворот', Остров Запорожья, Тайны Хортицы, Экскурсия по Хортице, Захоронение Колдуна, Древние святилища">
+        content="Туры выходного дня 'Новый поворот', Остров Запорожья, Тайны Хортицы, Экскурсия по Хортице, Днепрогэс, Древние святилища">
     <meta name="keywords"
-        content="Остров Запорожья, Тайны Хортицы, Экскурсия по Хортице, Захоронение Колдуна, Древние святилища " />
+        content="Остров Запорожья, Тайны Хортицы, Экскурсия по Хортице, Днепрогэс, Древние святилища " />
 
     <!-- Open Graph data-->
     <meta property="og:title" content="Хортица">
@@ -108,7 +108,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 12 Декабря</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 27 Февраля и 6 марта</span>
                                 </li>
                             </ul>
                         </div>
@@ -130,16 +130,14 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Стоимость 80 грн. - для детей от 5 до 12 лет, 
-                                дети до 4-х лет бесплатно.
-                                При брони с 9 декабря цена 105 грн,
-                                дети 5-12 лет - 95 грн
+                                АКЦИЯ! ЦЕНА ВСЕГО 50ГРН!    
+                                Детям до 5 лет бесплатно!
                             </span>
                         </div>
                         <!-- //Alert -->
                         
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>95 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>50 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
@@ -226,20 +224,20 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><strong>11:00</strong> сбор в районе острова Хортица
+                                        <p><strong>12:00</strong> сбор в районе острова Хортица
                                             (дополнительно оповещаем всех кто записался
                                             за 2 дня до начала экскурсии).
                                             Минутка позитива и в путешествие.
                                             Нас ожидают: <ins>"Шевченківська стежка",
                                                 Черная скала, виды на прекрасный Днепрогэс,
                                                 Сичевые ворота, высота Брогарня,
-                                                захоронение Колдуна, древние святилища
+                                                кладка Колдуна, древние святилища
                                                 и Балка молодяга...</ins></p>
                                         <p> Мы загадаем заветные желание в
                                             местах силы, получим заряд бодрости и
                                             энергии в балке молодости и узнаем много
                                             нового и неизведанного о нашем родном крае.<br />
-                                            Окончание экскурсии <strong>13:00</strong>.</p>
+                                            Окончание экскурсии <strong>14:00</strong>.</p>
                                         </p><br />
                                         <hr>
                                         <p><i>
@@ -291,7 +289,7 @@
                         <span class="badge rounded-pill bg-secondary text-white">Остров Запорожья</span>
                         <span class="badge rounded-pill bg-secondary text-white">Тайны Хортицы </span>
                         <span class="badge rounded-pill bg-secondary text-white">Экскурсия по Хортице </span>
-                        <span class="badge rounded-pill bg-secondary text-white">Захоронение Колдуна </span>
+                        <span class="badge rounded-pill bg-secondary text-white">Днепрогэс </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Древние святилища </span>
 
                     </div>
