--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="ru">
 
 <head>
-    <title>Туры выходного дня из Запорожья - "Новый Поворот"</title>
-    <meta name="title" content="Туры выходного дня из Запорожья - "Новый Поворот"">
+    <title> Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"</title>
+    <meta name="title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия - "Новый Поворот"">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
     <meta name="description"
-        content="Туры выходного дня ➤ 'Новый поворот' | Контакты: ☎ 0985771579, 0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья ">
+        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия ➤ 'Новый поворот' | Контакты: ☎  0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья ">
 
     <meta name="keywords"
-        content="Главная, Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
+        content="Главная, Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
 
     <!-- bing -->
     <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
 
     <!-- Open Graph data-->
-    <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Экскурсии выходного дня из Запорожья">
+    <meta property="og:title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот' | Экскурсии выходного дня из Запорожья">
     <meta property="og:description"
-        content="Туры выходного дня 'Новый поворот' | Контакты: ☎ 0985771579, ☎ 0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья  " />
+        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот' | Контакты: ☎ 0985771579, ☎ 0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья  " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/" />
     <meta property="og:image" content="images/novi-povorot.jpg">
@@ -839,7 +839,7 @@
         {
           "@context": "https://schema.org/",
            "@type": "WebSite",
-           "name": "Туры выходного дня Новый Поворот",           
+           "name": "Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот",           
            "url": "https://novipovorot.pp.ua",           
            "image": "https://novipovorot.pp.ua/images/novi-povorot.jpg",                      
             "sameAs": [
@@ -853,7 +853,7 @@
     <!-- /Schema.org -->
 
     <script>
-        console.log("Туры выходного дня 'Новый Поворот'");
+        console.log("Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый Поворот'");
     </script>
 
     <script>
