--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta charset="utf-8">
 
     <meta name="description"
-        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия ➤ 'Новый поворот' | Контакты: ☎  0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья ">
+        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия ➤ 'Новый поворот' | Контакты: ☎  0506702264, ✉ dovgalyv@ukr.net |  ">
 
     <meta name="keywords"
-        content="Главная, Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
+        content="Главная, Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот'" />
 
     <!-- bing -->
     <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
 
     <!-- Open Graph data-->
-    <meta property="og:title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот' | Экскурсии выходного дня из Запорожья">
+    <meta property="og:title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый поворот" >
     <meta property="og:description"
-        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот' | Контакты: ☎ 0985771579, ☎ 0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья  " />
+        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот' | Контакты: ☎ 0506702264, ✉ dovgalyv@ukr.net |  " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/" />
     <meta property="og:image" content="images/novi-povorot.jpg">
@@ -140,9 +140,8 @@
                         <div class="overlay">
                             <div class="container">
                                 <div class="w3layouts-banner-info">
-                                    <h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем
-                                        мечты. </h3>
-                                    <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
+                                    <h3 class="text-wh">Путешествуйте быстро и безопастно </h3>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот" "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -157,8 +156,8 @@
                         <div class="overlay">
                             <div class="container">
                                 <div class="w3layouts-banner-info">
-                                    <h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
-                                    <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
+                                    <h3 class="text-wh"> Комфортно и быстро перевезем Вас и Ваши посылки</h3>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот" "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -173,9 +172,8 @@
                         <div class="overlay">
                             <div class="container">
                                 <div class="w3layouts-banner-info">
-                                    <h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем
-                                        мечты.</h3>
-                                    <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
+                                    <h3 class="text-wh">Комфортно и быстро перевезем Вас и Ваши посылки.</h3>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -190,8 +188,8 @@
                         <div class="overlay1">
                             <div class="container">
                                 <div class="w3layouts-banner-info">
-                                    <h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
-                                    <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
+                                    <h3 class="text-wh">Комфортно и быстро перевезем Вас и Ваши посылки</h3>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -220,10 +218,7 @@
                     <h3 class="mt-lg-3">Мы отвезем вас в лучшие местa, <strong> путешествуйте вместе с нами! </strong>
                     </h3>
                     <p class="mt-4">
-                        Сделаем Вашу жизнь ярче и разнообразнее.
-                        Туры выходного дня из Запорожья, экскурсии в Запорожье и Карпатах, походы в Турции,
-                        мастер-классы и дегустации...
-                        Самые неожиданные места Украины и Европы.
+                       Комфортно и быстро перевезем Вас и Ваши посылки.
                     </p>
                     <p class="mt-3">
                         Путешествуйте с улыбкой. С любовью Новый поворот!
@@ -246,7 +241,7 @@
                     <div class="counter">
                         <span class="fa fa-ship"></span>
                         <div class="timer count-title count-number number2" data-max="2000">0</div>
-                        <p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
+                        <p class="count-text text-uppercase"> НАПРАВЛЕНИЯ ПОЕЗДОК </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 mt-lg-0 mt-5">
@@ -312,7 +307,7 @@
         <div class="container py-lg-4 py-sm-3">
             <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center">
-                Туры выходного дня "Новый Поворот"
+                Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"
             </p>
             <div class="row">
 
