--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 
 <head>
     <title> Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"</title>
-    <meta name="title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия - "Новый Поворот"">
+    <meta name="title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия - "Новый Поворот"">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
     <meta name="description"
-        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия ➤ 'Новый поворот' | Контакты: ☎  0506702264, ✉ dovgalyv@ukr.net |  ">
+        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия ➤ 'Новый поворот' | Контакты: ☎  0506702264, ✉ dovgalyv@ukr.net |  ">
 
     <meta name="keywords"
-        content="Главная, Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот'" />
+        content="Главная, Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия 'Новый поворот'" />
 
     <!-- bing -->
     <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
 
     <!-- Open Graph data-->
-    <meta property="og:title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый поворот" >
+    <meta property="og:title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия "Новый поворот" >
     <meta property="og:description"
-        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый поворот' | Контакты: ☎ 0506702264, ✉ dovgalyv@ukr.net |  " />
+        content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия 'Новый поворот' | Контакты: ☎ 0506702264, ✉ dovgalyv@ukr.net |  " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/" />
     <meta property="og:image" content="images/novi-povorot.jpg">
@@ -141,7 +141,7 @@
                             <div class="container">
                                 <div class="w3layouts-banner-info">
                                     <h3 class="text-wh">Путешествуйте быстро и безопастно </h3>
-                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот" "Новый Поворот"</h4>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия "Новый поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -157,7 +157,7 @@
                             <div class="container">
                                 <div class="w3layouts-banner-info">
                                     <h3 class="text-wh"> Комфортно и быстро перевезем Вас и Ваши посылки</h3>
-                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот" "Новый Поворот"</h4>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия "Новый поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -173,7 +173,7 @@
                             <div class="container">
                                 <div class="w3layouts-banner-info">
                                     <h3 class="text-wh">Комфортно и быстро перевезем Вас и Ваши посылки.</h3>
-                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"</h4>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия "Новый поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -189,7 +189,7 @@
                             <div class="container">
                                 <div class="w3layouts-banner-info">
                                     <h3 class="text-wh">Комфортно и быстро перевезем Вас и Ваши посылки</h3>
-                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"</h4>
+                                    <h4 class="text-wh">Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия "Новый поворот"</h4>
                                     <div class="buttons mt-4">
                                         <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
@@ -266,7 +266,7 @@
     <!-- how to book -->
     <section class="book py-5">
         <div class="container py-lg-5 py-sm-3">
-            <h2 class="heading text-capitalize text-center" data-aos="zoom-in">Как Спланировать Поездку</h2>
+            <h2 class="heading text-capitalize text-center" data-aos="zoom-in"> Заказать поездку, перевозку посылки</h2>
             <div class="row mt-5 text-center">
                 <div class="col-lg-4 col-sm-6">
                     <div class="grid-info">
@@ -307,33 +307,33 @@
         <div class="container py-lg-4 py-sm-3">
             <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center">
-                Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"
+                Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия "Новый поворот"
             </p>
             <div class="row">
 
-                <!-- Зоопарк Харьков и Фентези парк  -->    
+                <!-- Украина-Германия. Германия-Украина  -->    
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
-                            <img src="images/Zoo-Kharkiv/home-Zoo-Kharkiv.jpg" alt="Zoo-Kharkiv" class="img-fluid" />
+                            <img src="images/9.01%20ger.jpg" alt="Germanu" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>800грн.</span></p> 
+                        <p><span class="fa fa-tags"></span> <span> от 50 евро</span></p> 
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Харьков</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
-                                Зоопарк Харьков и Фентези парк
+                                Украина-Германия. Германия-Украина
                             </a>
                         </h5>
-                        <p>Самый крутой зоопарк-сафари!</p>
+                        <p>Перевезем: ваши вещи, мебель, велосипеды, маленькие, середние, огромные посылки</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  19 Марта </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  Из Украины Март: 2, 16, 30. Сбор/выдача посылок по Германии  3-5.03, 17-19.03, 31.03-2.04 Из Германии:  Март: 5, 19; 2.04 выезд пассажиров </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>     
-                <!--  //Зоопарк Харьков и Фентези парк  -->
+                <!--  //Украина-Германия. Германия-Украина -->
                                              
                  <!-- Каменец Подольский и Умань  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
