--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
                 <!-- Украина-Германия. Германия-Украина  -->    
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
+                        <a href="">
                             <img src="images/9.01%20ger.jpg" alt="Germanu" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span> от 50 евро</span></p> 
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Харьков</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Киев, Житомир, Ровно, Львов, Луцк</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
                                 Украина-Германия. Германия-Украина
