--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Виїзди з України вівторок/, субота на лютий:   25, 28
 Березень: 4, 7, 11, 14, 18, 21, 25, 28
-🇨🇿З Чехії понеділок, четвер виїзд з пасажирами! Видача посилок по містам Чехії: лютий:  19-20, 22-23, 26-27
+🇨🇿З Чехії понеділок, четвер виїзд з пасажирами! Видача посилок по містам Чехії: лютий:   26-27
 Березень: 1-2, 5-6, 8-9, 12-13, 15-16, 19-20, 22-23, 26-27, 29-30
-Виїзд пасажирів  лютий: 20, 23, 27
+Виїзд пасажирів  лютий:  27
 Березень: 2, 6, 9, 13, 16, 20, 23, 27, 30 </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
