--- a/index.html
+++ b/index.html
@@ -328,7 +328,14 @@
                         </h5>
                         <p>Перевезем: ваши вещи, мебель, велосипеды, маленькие, середние, огромные посылки</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  Из Украины Март: 2, 16, 30. Сбор/выдача посылок по Германии  3-5.03, 17-19.03, 31.03-2.04 Из Германии:  Март: 5, 19; 2.04 выезд пассажиров </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  Из Украины Березень: 2, 16, 30
+Квітень : 13, 27
+Травень: 11, 25
+                                                               Березень: 5, 19; 
+Квітень: 2, 16, 30
+Травень: 14, 28
+виїзд пасажирів. 
+Збір/видача посилок:  3-5.03, 17-19.03, 31.03-2.04, 14-16.04, 28-30.04, 12-14.05, 26-28.05 </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 День</span></li>
                         </ul>
                     </div>
