--- a/index.html
+++ b/index.html
@@ -101,8 +101,13 @@
             <!-- nav -->
             <nav class="py-md-4 py-3 d-lg-flex">
                 <div id="logo">
-                    <h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот
-                        </a></h1>
+                    <h1 class="mt-md-0 mt-2"> 
+                        <a href="index.html">
+                            <span class="fa fa-map-signs"></span> 
+                            Новый поворот <br>
+                            <span>380506702264</span>                             
+                        </a>
+                    </h1>
                 </div>
                 <label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
                 <input type="checkbox" id="drop" />
