--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
             <!-- nav -->
             <nav class="py-md-4 py-3 d-lg-flex">
                 <div id="logo">
-                    <h1 class="mt-md-0 mt-2"> 
+                    <h1 class="mt-md-0 mt-2" style="position:relative;"> 
                         <a href="index.html">
                             <span class="fa fa-map-signs"></span> 
                             Новый поворот <br>
-                            <span>380506702264</span>                             
+                            <span style="font-size:12px; position: absolute;left:100px">380506702264</span>                            
                         </a>
                     </h1>
                 </div>
