--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                             <img src="images/Cz%2005.01.jpg" alt="Czech"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span> от 15 евро</span></p> 
+                        <!--<p><span class="fa fa-tags"></span> <span> от 15 евро</span></p> -->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>УКРАЇНА -ЧЕХІЯ і ЧЕХІЯ-УКРАЇНА </h6>
