--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <!-- Украина-Германия. Германия-Украина  -->    
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="">
+                        <a href="https://novipovorot.pp.ua/">
                             <img src="images/9.01%20ger.jpg" alt="Germanu" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span> от 50 евро</span></p> 
@@ -331,7 +331,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Киев, Житомир, Ровно, Львов, Луцк</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
+                            <a href="https://novipovorot.pp.ua/">
                                 Украина-Германия. Германия-Украина
                             </a>
                         </h5>
@@ -353,17 +353,17 @@
                                              
                  <!-- УКРАЇНА -ЧЕХІЯ і ЧЕХІЯ-УКРАЇНА  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="images/Cz%2005.01.jpg">
-                        <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/">
                             <img src="images/Cz%2005.01.jpg" alt="Czech"
                                 class="img-fluid" />
                         </a>
-                        <!--<p><span class="fa fa-tags"></span> <span> от 15 евро</span></p> -->
+                        <p><span class="fa fa-tags"></span> <span> от 15 евро</span></p> 
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>УКРАЇНА -ЧЕХІЯ і ЧЕХІЯ-УКРАЇНА </h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
+                            <a href="https://novipovorot.pp.ua/">
                                УКРАЇНА -ЧЕХІЯ і ЧЕХІЯ-УКРАЇНА 
                             </a>
                         </h5>
@@ -388,7 +388,7 @@
 ЕСТОНІЯ-ЛАТВІЯ -ЛИТВА-УКРАЇНА!  -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
+                        <a href="https://novipovorot.pp.ua/">
                             <img src="images/22.02%20lt%20es1.jpg" alt="Litva latvia Estonia" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span> від 25 евро</span></p> 
@@ -422,7 +422,7 @@
 ГОЛАЯ ПРИСТАНЬ - СКАДОВСК - АРМЯНСК  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Georgia-summer.html">
+                        <a href="https://novipovorot.pp.ua/">
                             <img src="images/ok%2021.2%202.jpg" alt="ЭНЕРГОДАР
 МЕЛИТОПОЛЬ-ГЕНИЧЕСК"
                                 class="img-fluid" />
@@ -432,7 +432,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Грузия  </h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Georgia-summer.html">
+                            <a href="https://novipovorot.pp.ua/">
                                 Перевезем ВСЕХ!Без предоплат! 
                             </a>
                         </h5>
