--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 
 <head>
-    <title> Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия "Новый Поворот"</title>
-    <meta name="title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия - "Новый Поворот"">
+    <title> Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Польша, Грузия 'Новый Поворот'</title>
+    <meta name="title" content="Перевозки пассажиров и посылок Украина-Германия, Чехия, Литва, Латвия, Эстония, Польша, Грузия - 'Новый Поворот'">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
