--- a/packages.html
+++ b/packages.html
@@ -1046,7 +1046,7 @@
                         <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
                             <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
-                        <!-- <p><span class="fa fa-tags"></span> <span>215грн.</span></p> -->
+                       <p><span class="fa fa-tags"></span> <span>215грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
